--- a/styles/style.css
+++ b/styles/style.css
@@ -101,6 +101,7 @@ img{
 	opacity: 0;
 	margin-bottom:10px;
 	margin-right: -15%;
+	visibility: hidden;
 }
 .size-box div{
 	margin: 15% auto;
@@ -119,6 +120,7 @@ img{
 	opacity: 0;
 	margin-bottom:10px;
 	margin-right: -15%;
+	visibility: hidden;
 }
 
 .colors{
@@ -226,6 +228,7 @@ input[type="checkbox"]:hover {
 .icon-box + div:hover .color-box{
 	opacity: 1;
 	margin-bottom: 0;
+	visibility: visible;
 }
 
 /*color option box hover effecr*/
@@ -241,6 +244,7 @@ input[type="checkbox"]:hover {
 	margin-bottom: 0;
 	color: #55a4dd;
 	font-family: helvetica, sans-serif;
+	visibility: visible;
 }
 
 /*.flip3D:hover .image-front{
